# zzdsj-api-carbon

./: 709-710详细开发说明.md  CONFIGURATION_UPDATE_SUMMARY.md  KNOWLEDGE_UPLOAD_DEVELOPMENT_PLAN.md  KNOWLEDGE_UPLOAD_PROGRESS_REPORT.md  PM2_MANAGEMENT.md  PYTHON_ENVIRONMENT_GUIDE.md  add-python-env-support.sh  api_schema_adaptation_analysis_report.md  batch-fix-pm2.sh  daily_development_summary_2025-01-16.md  ecosystem.all.config.js  final-fix-pm2.sh  fix-pm2-configs.sh  frontend-integration-plan.md  pm2-manager.sh  start-services.sh  start-with-conda.sh  test-interactive.sh  unified_redis_migration_guide.md  工具服务集成方案.md
agent-orchestration-service/: .dockerignore  LICENSE  (+6 more)
agent-orchestration-service/core/: .env.siliconflow  .gitignore  env.sample  mcp.json  pyproject.toml  requirements.txt  requirements_fixed.txt  requirements_numpy_fix.txt  requirements_utf8.txt  run_server.py
agent-orchestration-service/core/agent_core/: flow.py
agent-orchestration-service/core/agent_core/config/: app_config.py  logging_config.py
agent-orchestration-service/core/agent_core/events/: event_strategies.py  event_triggers.py  ingestors.py
agent-orchestration-service/core/agent_core/framework/: agent_strategy_helpers.py  dynamic_loader.py  handover_service.py  inbox_processor.py  profile_utils.py  tool_registry.py  turn_manager.py
agent-orchestration-service/core/agent_profiles/: __init__.py  loader.py
agent-orchestration-service/core/api/: README.md  __init__.py  events.py  message_handlers.py  metadata.py  server.py  session.py
agent-orchestration-service/core/rag_configs/: index.yaml  internal_project_docs.yaml
(+817 files in other folders)
